<resources>
    <string name="app_name">Repair Order</string>
    <string name="SubHeader">Subheader</string>

    <string name="Sub_Total">Subtotal</string>
    <string name="Sub_TotalNum">Subtotal</string>
    <string name="Total">Total</string>
    <string name="TotalNum">Total</string>
    <string name="ButtonName">Submit</string>
    <string name="tax">Tax</string>
    <string name="taxNum">0</string>



    <string name="Q_1">Order type</string>
    <string name="Q_2">Technician</string>
    <string name="Q_3">Inspection</string>
    <string name="Q_4">Paint</string>
    <string name="Q_5">Parts</string>
    <string name="Q_6">Labor</string>

    <string name="A_1">(paint, repair, etc)</string>
    <string name="A_2">(John Doe)</string>
    <string name="A_3">$</string>
    <string name="A_4">$</string>
    <string name="A_5">$</string>
    <string name="A_6">$</string>
</resources>